--- a/index.html
+++ b/index.html
@@ -226,8 +226,11 @@
   </div>
 
   <div class="payment-container hidden" id="blocked-message">
-    <h2>ACCÈS REFUSÉ</h2>
-    <p>Votre adresse IP ne provient pas de France ou vous utilisez un bot.</p>
+    <center><h1>SITE EN MAINTENANCE</h1>
+    <center><p>Nos équipes procédent à des maj importantes </p>
+      
+      <center><p><h3>Veuillez nous excuser </p>
+      
   </div>
 
   <script>
