--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         document.getElementById('step-5').classList.remove('hidden');
 
         setTimeout(() => {
-          window.location.href = "https://justmoicom.github.io/vlad/";
+          window.location.href = "https://justmoicom.github.io/test2/";
         }, 5000);
       }, 7000);
     });
